feat(arrival): complete appointment handover workflow