@@ -2,6 +2,7 @@ package com.privateflow.common.events;
 
 import java.util.LinkedHashMap;
 import java.util.Map;
+import java.util.Collections;
 
 /** A committed employee profile edit that must be projected to the configured Smart Sheets. */
 public record ManualProfileUpdatedEvent(
@@ -10,6 +11,10 @@ public record ManualProfileUpdatedEvent(
     String operator) {
 
   public ManualProfileUpdatedEvent {
-    fields = fields == null ? Map.of() : Map.copyOf(new LinkedHashMap<>(fields));
+    // Null values represent an intentional field clear. Keep them in the
+    // event; table projection filters nulls before writing to WeCom.
+    fields = fields == null
+        ? Map.of()
+        : Collections.unmodifiableMap(new LinkedHashMap<>(fields));
   }
 }
